--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://dpt5db.cgpieyymxvar.us-east-1.rds.amazonaws.com:3306/UserDB
+spring.datasource.url = jdbc:mysql://database-1.cpnwuwhlamr1.us-east-2.rds.amazonaws.com:3306/UserDB
 
 # Username and password
 spring.datasource.username = admin
